pauprod1/base/sso-account/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  name: sso-account-auth.sharecare.com.au
spec: {}
status:
  loadBalancer: {}
